--- a/.github/workflows/publish-docker-image.yaml
+++ b/.github/workflows/publish-docker-image.yaml
@@ -1,7 +1,8 @@
 name: Publish Docker image
-on:
-  release:
-    types: [published]
+on: 
+  push:
+    tags:
+    - 'v*'
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -20,7 +21,6 @@ jobs:
       uses: docker/metadata-action@v5
       with:
         images: ghcr.io/${{ github.repository }}
-  
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
