--- a/charts/zumble/values.yaml
+++ b/charts/zumble/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: ghcr.io/illeniumstudios/zumble
   pullPolicy: IfNotPresent
-  tag: v0.1.2
+  tag: ""
 
 imagePullSecrets: []
 nameOverride: ""
