--- a/.github/workflows/helm-chart-oci-release.yaml
+++ b/.github/workflows/helm-chart-oci-release.yaml
@@ -22,7 +22,7 @@ jobs:
       uses: appany/helm-oci-chart-releaser@v0.4.1
       with:
         name: zumble
-        repository: ${{ github.repository_owner }}
+        repository: ${{ github.repository_owner }}/helm-charts
         tag: ${{ steps.yaml.outputs.VERSION }}
         path: charts/zumble
         registry: ghcr.io
