--- a/charts/zumble/templates/deployment.yaml
+++ b/charts/zumble/templates/deployment.yaml
@@ -34,6 +34,9 @@ spec:
           {{- toYaml .Values.securityContext | nindent 12 }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        env:
+        - name: RUST_LOG
+          value: {{ .Values.logLevel }}
         envFrom:
         - secretRef:
             name: {{ include "zumble.fullname" . }}
