--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zumble"
-version = "0.2.1"
+version = "0.3.0"
 edition = "2021"
 
 [dependencies]
@@ -34,6 +34,7 @@ tokio-rustls = "0.23.4"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 prometheus = { version  = "0.13.3", features = ["process"] }
+konst = "0.3.8"
 
 [profile.release]
 codegen-units = 1
