--- a/charts/zumble/templates/deployment.yaml
+++ b/charts/zumble/templates/deployment.yaml
@@ -37,6 +37,8 @@ spec:
         env:
         - name: RUST_LOG
           value: {{ .Values.logLevel }}
+        - name: CLIENT_CAPACITY
+          value: "{{ .Values.config.clientCapacity }}"
         envFrom:
         - secretRef:
             name: {{ include "zumble.fullname" . }}
